# rust-sqlx-example

./: .gitignore  .tool-versions  Cargo.toml  seed.csv
migrations/: 20230816031923_create_users_table.up.sql
src/: lib.rs  main.rs
tests/: test.rs
